@@ -22,7 +22,6 @@ import org.openqa.selenium.By;
 import org.openqa.selenium.WebElement;
 import org.openqa.selenium.testing.JUnit4TestBase;
 
-import java.util.Arrays;
 import java.util.List;
 import java.util.stream.Collectors;
 
@@ -41,7 +40,7 @@ public class RelativeLocatorTest extends JUnit4TestBase {
     List<WebElement> elements = driver.findElements(withTagName("p").above(lowest));
     List<String> ids = elements.stream().map(e -> e.getAttribute("id")).collect(Collectors.toList());
 
-    assertThat(ids).isEqualTo(Arrays.asList("mid", "above"));
+    assertThat(ids).isEqualTo(List.of("mid", "above"));
   }
 
   @Test
@@ -54,4 +53,22 @@ public class RelativeLocatorTest extends JUnit4TestBase {
     assertThat(ids).isEqualTo(singletonList("third"));
   }
 
+  @Test
+  public void exerciseNearLocator() {
+    driver.get(appServer.whereIs("relative_locators.html"));
+
+    List<WebElement> seen = driver.findElements(withTagName("td").near(By.id("center")));
+
+    // Elements are sorted by proximity and then DOM insertion order.
+    // Proximity is determined using distance from center points, so
+    // we expect the order to be:
+    // 1. Directly above (short vertical distance, first in DOM)
+    // 2. Directly below (short vertical distance, later in DOM)
+    // 3. Directly left (slight longer distance horizontally, first in DOM)
+    // 4. Directly right (slight longer distance horizontally, later in DOM)
+    // 5-8. Diagonally close (pythagorus sorting, with top row first
+    //    because of DOM insertion order)
+    List<String> ids = seen.stream().map(e -> e.getAttribute("id")).collect(Collectors.toList());
+    assertThat(ids).isEqualTo(List.of("second", "eighth", "fourth", "sixth", "first", "third", "seventh", "ninth"));
+  }
 }
